# summeets

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  final_test.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_modular_gui.py  test_original_gui.py
.github/workflows/: playwright-gui-tests.yml
claudedocs/: MASTER_ASSESSMENT_REPORT.md  MASTER_CODEBASE_REVIEW.md  REMEDIATION_PLAN.md  architect_review.md  code_review.md  security_audit.md  test_suite_analysis_report.md  test_suite_summary.txt
cli/: __init__.py  app.py  tui.py
cli/tui/: __init__.py  app.py  constants.py  demo.py  exceptions.py  messages.py  processing.py  streaming.py  widgets.py
core/: __init__.py  cache.py  config.py  fsio.py  jobs.py  models.py  security.py  summarize.py  transcribe.py  validation.py  workflow.py
core/audio/: __init__.py  compression.py  ffmpeg_ops.py
core/audit/: __init__.py
core/providers/: __init__.py  anthropic_client.py  openai_client.py
core/summarize/: __init__.py  (+2 more)
docs/: CODE_REVIEW.md  CORE_ARCHITECTURE_ASSESSMENT.md  QUICKSTART.md  REMEDIATION-PLAN.md  SECURITY-ASSESSMENT.md  TESTING_GUIDE.md  TUI-DESIGN.md  TUI-IMPLEMENTATION-GUIDE.md  TUI-IMPLEMENTATION-SKELETON.py  assessment-core-folder-reorganization-20250816.md  assessment-summarization-issues-20250817.md  assessment-templates-requirements-20250818.md  code-review-assessment-20250816.md  email_draft.md  email_limits.json  remediation-report-20250816.md  requirements-analysis-new-gui-workflow-20250816.md  requirements-template-analysis-20250817.md  test-alignment-assessment-20250817.md  test_report_20260110_091137.md  tokenizer-implementation.md
electron/: index.html  main.js  preload.js
gui/: __init__.py  app.py  app_new.py  constants.py  ui_utils.py
scripts/: GUI-TESTING-GUIDE.md  quick-gui-test.ps1  run-gui-test.bat  run_tests.py  test-gui-automation.ps1  win_dev.ps1
src/: __init__.py  models.py  tokenizer.py  workflow.py  workflow_components.py
tests/: TEST-DOCUMENTATION.md  __init__.py  conftest.py  pytest.ini  test-suite-assessment-complete-20250816.md  test_smoke.py  test_templates.py
(+112 files in other folders)
