[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "summeets"
version = "0.1.0"
description = "Transcribe + summarize meetings with a shared core for CLI/GUI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0.1",
  "openai>=1.40.0",
  "anthropic>=0.34.1",
  "rich>=13.7",
  "textual>=0.70.0",
  "replicate>=0.25.0",
  "tenacity>=8.3.0",
  "alive-progress>=3.1.5",
]

[project.scripts]
summeets = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "cli*", "gui*"]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "mypy>=1.0.0",
  "ruff>=0.1.0",
  "black>=23.0.0",
]

test = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
]