[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "summeets"
version = "0.1.0"
description = "Transcribe + summarize meetings with a shared core for CLI/GUI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "python-dotenv>=1.0.1,<2.0",
  "textual>=0.73,<0.99",
  "openai>=1.40.0,<2.0",
  "anthropic>=0.34.1,<1.0",
  "rich>=13.7,<14.0",
  "replicate>=0.25.0,<1.0",
  "tenacity>=8.3.0,<9.0",
  "alive-progress>=3.1.5,<4.0",
]

[project.scripts]
summeets = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "cli*", "main*"]

[tool.setuptools]
py-modules = ["main"]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "mypy>=1.0.0",
  "ruff>=0.1.0",
  "black>=23.0.0",
]

test = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-c tests/pytest.ini"
cache_dir = "tests/.pytest_cache"
